18. Create tensors from NumPy arrays

--- a/00_TensorflowFundamentals.ipynb
+++ b/00_TensorflowFundamentals.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "00_TensorflowFundamentals.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyONx0pfp4mYElYV41VQq7Ar"
+      "authorship_tag": "ABX9TyM4Ms01bwx4PgR0PlCAYKEz"
     },
     "kernelspec": {
       "name": "python3",
@@ -24,7 +24,7 @@
       "source": [
         ""
       ],
-      "execution_count": 16,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -88,14 +88,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6UBTpZ4TilNQ",
-        "outputId": "f47969c3-8e40-4886-b83f-f765f79f3419"
+        "outputId": "e3caa52d-0bc2-494c-f923-32eb4e6dc535"
       },
       "source": [
         "#Import TensorFlow\n",
         "import tensorflow as tf\n",
         "print(tf.__version__)"
       ],
-      "execution_count": 17,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -113,14 +113,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "21SeinibmNat",
-        "outputId": "97471db1-f13d-44cb-f5cf-8de779f7de88"
+        "outputId": "6b2ce6a4-f64b-4f76-870e-fdf51f59253a"
       },
       "source": [
         "#Create tensors with tf.constant()\n",
         "scalar = tf.constant(7)\n",
         "scalar"
       ],
-      "execution_count": 18,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -132,7 +132,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 18
+          "execution_count": 3
         }
       ]
     },
@@ -143,13 +143,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "PGRNBzwbwCrh",
-        "outputId": "1bd62920-d168-435a-b6f2-3713736fd62a"
+        "outputId": "8f1816c4-05c6-4f68-d39f-91faab163391"
       },
       "source": [
         "#Check the number of dimensions of a tensor(ndim stands for number of dimensions)\n",
         "scalar.ndim"
       ],
-      "execution_count": 19,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -161,7 +161,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 19
+          "execution_count": 4
         }
       ]
     },
@@ -172,13 +172,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "vGIf0pt7wST3",
-        "outputId": "06a0ef7d-8c38-4e58-efae-2694947fb9bd"
+        "outputId": "26bb7909-3ba0-4830-8b7a-694e06b867e5"
       },
       "source": [
         "vector = tf.constant([10, 10])\n",
         "vector"
       ],
-      "execution_count": 20,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -190,7 +190,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 20
+          "execution_count": 5
         }
       ]
     },
@@ -201,12 +201,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "PqJ_R7KewbPA",
-        "outputId": "fadf4dda-6ee3-40c1-eeea-5937e31c3d62"
+        "outputId": "6e5f3faf-eacc-4808-df07-02107f80b381"
       },
       "source": [
         "vector.ndim"
       ],
-      "execution_count": 21,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -218,7 +218,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 21
+          "execution_count": 6
         }
       ]
     },
@@ -229,7 +229,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4HV0P130wtly",
-        "outputId": "60689661-d2dd-47de-bf44-12abf1757030"
+        "outputId": "2b66f5b8-6071-4b1d-8c89-1a3b02d9a0c5"
       },
       "source": [
         "# Create a matrix (has more than 1 dimensions)\n",
@@ -237,7 +237,7 @@
         "                      [7, 10]])\n",
         "matrix"
       ],
-      "execution_count": 22,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -251,7 +251,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 22
+          "execution_count": 7
         }
       ]
     },
@@ -262,13 +262,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "YPeMxAsaxD7t",
-        "outputId": "9b92087b-a155-423a-c84f-1353d3c95358"
+        "outputId": "f5192cc0-3f6b-4aae-e2f3-02fd35ce1e55"
       },
       "source": [
         "# Check dimensions of a matrix\n",
         "matrix.ndim"
       ],
-      "execution_count": 23,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -280,7 +280,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 23
+          "execution_count": 8
         }
       ]
     },
@@ -291,7 +291,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "bcVVxtYexRS6",
-        "outputId": "be990594-7109-4f77-d1bf-6e7fcaf94add"
+        "outputId": "86a4a059-acc2-4c4d-de38-e7acae636648"
       },
       "source": [
         "#Create another matrix\n",
@@ -300,7 +300,7 @@
         "                              [8., 9.]], dtype = tf.float16) # specify the data type with dtype parameter\n",
         "another_matrix"
       ],
-      "execution_count": 24,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -315,7 +315,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 24
+          "execution_count": 9
         }
       ]
     },
@@ -326,13 +326,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "TFQXJyN6xqhz",
-        "outputId": "c8fcc7ad-7aea-4a77-e23b-b5e40efb1adb"
+        "outputId": "441dd238-bb04-4ef0-b1c6-5ef6a9139f5b"
       },
       "source": [
         "#Check dimensions of another matrix\n",
         "another_matrix.ndim"
       ],
-      "execution_count": 25,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -344,7 +344,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 25
+          "execution_count": 10
         }
       ]
     },
@@ -355,7 +355,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "116jCDcd-1dY",
-        "outputId": "54f101f5-5795-4f5c-e33f-30368ee412d3"
+        "outputId": "91428aeb-c3a7-4d70-ce7a-f32eb9a4ddfe"
       },
       "source": [
         "#Let's create a tensor\n",
@@ -370,7 +370,7 @@
         "                       [22, 23, 24]] ])\n",
         "tensor"
       ],
-      "execution_count": 26,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -393,7 +393,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 26
+          "execution_count": 11
         }
       ]
     },
@@ -404,12 +404,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "T35AsD_7ALwz",
-        "outputId": "fea4e8c8-56b3-46c7-c49f-832193972477"
+        "outputId": "af0700ce-6b79-4824-e834-1e4d5b5347bc"
       },
       "source": [
         "tensor.ndim"
       ],
-      "execution_count": 27,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -421,7 +421,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 27
+          "execution_count": 12
         }
       ]
     },
@@ -433,7 +433,7 @@
       "source": [
         ""
       ],
-      "execution_count": 27,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -466,7 +466,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "GFcVeWRxERuc",
-        "outputId": "bec1cd34-a4e3-4d5b-8732-1557136a71f7"
+        "outputId": "e956e4f7-d720-4f1b-d368-9d92b89be2c7"
       },
       "source": [
         "# Create the same tensor with tf.Variable() as above\n",
@@ -474,7 +474,7 @@
         "unchangeable_tensor = tf.constant([10, 7])\n",
         "changeable_tensor, unchangeable_tensor"
       ],
-      "execution_count": 28,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -487,51 +487,52 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 28
+          "execution_count": 13
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 197
-        },
-        "id": "10L3oFkMFj7C",
-        "outputId": "99778406-32c7-49cb-c4c8-5d696d1f80ba"
+        "id": "10L3oFkMFj7C"
       },
       "source": [
         "# Let's try change one of the elements in our changeable tensor\n",
         "\n",
-        "changeable_tensor[0] = 7\n"
+        "#Uncomment this\n",
+        "#changeable_tensor[0] = 7\n"
       ],
-      "execution_count": 29,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "TypeError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-29-5d0349850b18>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Let's try change one of the elements in our changeable tensor\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mchangeable_tensor\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m7\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m: 'ResourceVariable' object does not support item assignment"
-          ]
-        }
-      ]
+      "execution_count": 15,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "lhVewLsVGFhG"
+        "id": "lhVewLsVGFhG",
+        "outputId": "721110c8-703d-4673-923f-6c084c07f2de",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "# How about we try .assign()\n",
         "changeable_tensor[0].assign(7)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Variable 'UnreadVariable' shape=(2,) dtype=int32, numpy=array([7, 7], dtype=int32)>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 16
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -540,9 +541,11 @@
       },
       "source": [
         "#Let's try change our unchangeable tensor\n",
-        "unchangeable_tensor[0].assign(7)"
+        "#Uncomment here\n",
+        "\n",
+        "#unchangeable_tensor[0].assign(7)"
       ],
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -563,7 +566,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "86orzPmGODD9",
-        "outputId": "1920d477-e389-457e-a9b3-dd81cda52a26"
+        "outputId": "0a4bbd31-9a53-4602-ed2e-0f08862749be"
       },
       "source": [
         "# Create 2 random (but the same)  tensors\n",
@@ -576,7 +579,7 @@
         "#Are they equal?\n",
         "random_1, random_2 , random_1 == random_2"
       ],
-      "execution_count": 30,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -599,7 +602,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 30
+          "execution_count": 19
         }
       ]
     },
@@ -626,7 +629,7 @@
         "                            ])\n",
         "\n"
       ],
-      "execution_count": 34,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -636,29 +639,29 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "yOjAUM0WWia1",
-        "outputId": "a7201713-5507-405b-9c47-4ec83818a7ff"
+        "outputId": "9627163b-b2ff-4d9b-fd8e-f198aebb8622"
       },
       "source": [
         "#Shuffle our non-shuffled tensor\n",
         "\n",
         "tf.random.shuffle(not_shuffled) #operation level seed"
       ],
-      "execution_count": 37,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
               "<tf.Tensor: shape=(3, 2), dtype=int32, numpy=\n",
-              "array([[ 2,  5],\n",
-              "       [ 3,  4],\n",
+              "array([[ 3,  4],\n",
+              "       [ 2,  5],\n",
               "       [10,  7]], dtype=int32)>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 37
+          "execution_count": 21
         }
       ]
     },
@@ -681,13 +684,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "QIX2_AemhUv5",
-        "outputId": "6e33033f-a996-4efe-d53c-e40b17a9bd32"
+        "outputId": "fb3521d4-83a4-47ec-fa66-07fcd84a2219"
       },
       "source": [
         "tf.random.set_seed(42) #global level seed\n",
         "tf.random.shuffle(not_shuffled, seed=42) #operation level random seed"
       ],
-      "execution_count": 133,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -702,7 +705,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 133
+          "execution_count": 22
         }
       ]
     },
@@ -719,16 +722,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "kxxYGhBIQKUe",
-        "outputId": "dca37363-7b96-4506-872a-16230220815c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "431a2c26-1fa8-408f-a1cf-d13c28f65a5f"
       },
       "source": [
         "# Create a tensor of all ones\n",
         "tf.ones([10, 7])"
       ],
-      "execution_count": 136,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -750,7 +753,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 136
+          "execution_count": 23
         }
       ]
     },
@@ -758,16 +761,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "2ZYAL-g1QffJ",
-        "outputId": "117aac1a-10f5-4ecb-f4af-ca16e7695cec",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "81223ab9-9798-467d-e403-7efd0090f76c"
       },
       "source": [
         "#Create a tensor of all zeros\n",
         "tf.zeros(shape=[3, 4])"
       ],
-      "execution_count": 138,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -782,7 +785,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 138
+          "execution_count": 24
         }
       ]
     },
@@ -800,10 +803,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "g_0tne6kQtDS",
-        "outputId": "89829dd4-4c22-4c26-e26d-4ee9785a51ef",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "dcdebe68-1d6b-47c9-d560-272c6c967ec5"
       },
       "source": [
         "# You can also turn NumPy array into tensors\n",
@@ -814,7 +817,7 @@
         "#X = tf.constant(some_matrix) #capital for matrix or tensor\n",
         "#y = tf.constant(vector) #non-capital for vector"
       ],
-      "execution_count": 144,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -827,9 +830,69 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 144
+          "execution_count": 25
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "NUe49j0_WOKD",
+        "outputId": "5f0050c7-9401-456b-cace-b8394eaa2936",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "A = tf.constant(numpy_A, shape=(2, 3, 4))\n",
+        "B = tf.constant(numpy_A)\n",
+        "A, B\n"
+      ],
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(<tf.Tensor: shape=(2, 3, 4), dtype=int32, numpy=\n",
+              " array([[[ 1,  2,  3,  4],\n",
+              "         [ 5,  6,  7,  8],\n",
+              "         [ 9, 10, 11, 12]],\n",
+              " \n",
+              "        [[13, 14, 15, 16],\n",
+              "         [17, 18, 19, 20],\n",
+              "         [21, 22, 23, 24]]], dtype=int32)>,\n",
+              " <tf.Tensor: shape=(24,), dtype=int32, numpy=\n",
+              " array([ 1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, 13, 14, 15, 16, 17,\n",
+              "        18, 19, 20, 21, 22, 23, 24], dtype=int32)>)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 40
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "t-gSF7SDXS-G"
+      },
+      "source": [
+        "### Getting information from tensors"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "OzKcZ2htXX1R"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
