20. Indexing and expanding tensors

--- a/00_TensorflowFundamentals.ipynb
+++ b/00_TensorflowFundamentals.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "00_TensorflowFundamentals.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMMsrytYiA7wB1G4Hwtuxyn"
+      "authorship_tag": "ABX9TyOA1jJ+Hu1b/5ShFLnD7/jD"
     },
     "kernelspec": {
       "name": "python3",
@@ -893,10 +893,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "OzKcZ2htXX1R",
-        "outputId": "d317790a-109e-497f-e547-75fa8fc87cd3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "d317790a-109e-497f-e547-75fa8fc87cd3"
       },
       "source": [
         "# Create a rank 4 tensor (4 dimensions)\n",
@@ -952,11 +952,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "-n41E2FY3wml",
-        "outputId": "15f12b0a-8f53-412d-93d8-6fb618802d07",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "-n41E2FY3wml",
+        "outputId": "15f12b0a-8f53-412d-93d8-6fb618802d07"
       },
       "source": [
         "rank_4_tensor[0]"
@@ -994,11 +994,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ntkLLeJO37UZ",
-        "outputId": "968224e1-9d7d-4ee3-b313-a4fc36a18a6c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ntkLLeJO37UZ",
+        "outputId": "968224e1-9d7d-4ee3-b313-a4fc36a18a6c"
       },
       "source": [
         "rank_4_tensor.shape, rank_4_tensor.ndim, tf.size(rank_4_tensor)"
@@ -1022,11 +1022,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "a1zbRutu4JYB",
-        "outputId": "94c14b51-43c1-4d68-86eb-d335caf00eb2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "a1zbRutu4JYB",
+        "outputId": "94c14b51-43c1-4d68-86eb-d335caf00eb2"
       },
       "source": [
         "2*3*4*5\n"
@@ -1050,11 +1050,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "NWktndiG4MLW",
-        "outputId": "f41b924e-a74e-438f-a45b-60c276169651",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "NWktndiG4MLW",
+        "outputId": "f41b924e-a74e-438f-a45b-60c276169651"
       },
       "source": [
         "#Get various attributes of our tensor\n",
@@ -1083,15 +1083,367 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "5yut3DWY5pNk"
+        "id": "nhawifjI6Bnq"
       },
       "source": [
-        ""
+        "### Indexing Tensors\n",
+        "\n",
+        "Tensors can be indexed just like Python lists.\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "8brDTl9W6aLB",
+        "outputId": "c2b45fd7-a075-4a45-9e7b-039de3e6f390",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "some_list = [1, 2, 3, 4]\n",
+        "some_list[:2]"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1, 2]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 34
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1aNxzyOH6Hjv",
+        "outputId": "9c55016b-18c6-40b0-885f-cbb4df64cb9e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Get the first 2 elements of each dimension\n",
+        "rank_4_tensor[:2, :2, :2, :2]"
+      ],
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(2, 2, 2, 2), dtype=float32, numpy=\n",
+              "array([[[[0., 0.],\n",
+              "         [0., 0.]],\n",
+              "\n",
+              "        [[0., 0.],\n",
+              "         [0., 0.]]],\n",
+              "\n",
+              "\n",
+              "       [[[0., 0.],\n",
+              "         [0., 0.]],\n",
+              "\n",
+              "        [[0., 0.],\n",
+              "         [0., 0.]]]], dtype=float32)>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 35
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "AHcFAmHh7Jjd",
+        "outputId": "e81359c5-5b7d-442d-bb39-90cedae6cdd7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "some_list[:1]"
+      ],
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 39
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "yXacuHtp7hWa",
+        "outputId": "eb9ffba6-5d0d-40d9-862d-6e156da66f6f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "rank_4_tensor.shape"
+      ],
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "TensorShape([2, 3, 4, 5])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 42
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "c6bhxkZ16q8g",
+        "outputId": "a679d47e-da37-4c28-e8bc-12431ab71cbd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Get the first element from each dimension from each index except for the final one\n",
+        "rank_4_tensor[:1, :1, :1, :]"
+      ],
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(1, 1, 1, 5), dtype=float32, numpy=array([[[[0., 0., 0., 0., 0.]]]], dtype=float32)>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 43
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "RLKQcCE77vD6",
+        "outputId": "ea46ce19-bf5c-4227-e71e-8485e17a71aa",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "#Create a rank 2 tensor(2 dimensions)\n",
+        "rank_2_tensor = tf.constant([[10, 7],\n",
+        "                             [3, 4]])\n",
+        "rank_2_tensor.shape, rank_2_tensor.ndim"
+      ],
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(TensorShape([2, 2]), 2)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 48
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "117xdzypOS59",
+        "outputId": "223213d6-43a2-48e1-f6f0-1a4ff532030a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "some_list[-1]"
+      ],
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "4"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 50
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "zyXiXqRoJXnE",
+        "outputId": "a81642e0-b5b2-4a5b-ae5d-114e7c85a5f7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Get last item of each of our rank 2 tensor\n",
+        "rank_2_tensor[:, -1]"
+      ],
+      "execution_count": 52,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(2,), dtype=int32, numpy=array([7, 4], dtype=int32)>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 52
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "aJjInnmaOeQN",
+        "outputId": "946102ae-cb90-4a7b-c1a5-4dcab46afc95",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Add in extra dimension to our rank 2 tensor\n",
+        "rank_3_tensor = rank_2_tensor[..., tf.newaxis]\n",
+        "rank_3_tensor"
+      ],
+      "execution_count": 53,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(2, 2, 1), dtype=int32, numpy=\n",
+              "array([[[10],\n",
+              "        [ 7]],\n",
+              "\n",
+              "       [[ 3],\n",
+              "        [ 4]]], dtype=int32)>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 53
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "mepVpDYlO7dE",
+        "outputId": "0855dd27-6d3f-4f0b-ea59-d42c11636e26",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "#Alternative to tf.newaxis\n",
+        "tf.expand_dims(rank_2_tensor, axis = -1) # \"-1\" means expand the final axis"
+      ],
+      "execution_count": 55,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(2, 2, 1), dtype=int32, numpy=\n",
+              "array([[[10],\n",
+              "        [ 7]],\n",
+              "\n",
+              "       [[ 3],\n",
+              "        [ 4]]], dtype=int32)>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 55
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "oFOTfSi6PpVf",
+        "outputId": "2ca2afc5-06fa-4147-cf9d-bc401669bf5b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "#Alternative to tf.newaxis\n",
+        "tf.expand_dims(rank_2_tensor, axis = 0)"
+      ],
+      "execution_count": 58,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(1, 2, 2), dtype=int32, numpy=\n",
+              "array([[[10,  7],\n",
+              "        [ 3,  4]]], dtype=int32)>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 58
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "9BjoyP4yP7x1"
+      },
+      "source": [
+        "### Manipulating tensors(tensor operations)"
+      ]
     }
   ]
 }
